Update and rename para2.html to index.html

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
   <!--<div class="w3-row">
     <div class="w3-col m5">-->
     <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar"><br>Contact Us</span></div>
-      	<p>Email: <a href="mailto:gsa@nmt.edu">gsa@nmt.edu</a></p>
+      	<p>Email: <a href="mailto:gsa@nmt.edu">gsa@npe.nmt.edu</a></p>
 <p><strong>To subscribe to the GSA email list send a blank email with the subject askingto: </strong><strong><a href="mailto:gsa@npe.nmt.edu">gsa@npe.nmt.edu</a></strong></p>
 <p><strong>Office location</strong>: Fidel Center, 2nd Floor, Room 220A (walk inside into Room 220, where the Center for Graduate Studies is)</p>
 <p>All officers have signature authority. You are encouraged to use the officer hours to take care of your paperwork.</p>
