--- a/index.html
+++ b/index.html
@@ -349,11 +349,9 @@ function myMap()
   marker.setMap(map);
 }
 </script>
-<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwRtIClCQ0cIGz_SxZYJ4qeCF-rNvAlzQ&callback=myMap"></script>
-<!--
-To use this code on your website, get a free API key from Google.
-Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
--->
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwRtIClCQ0cIGz_SxZYJ4qeCF-rNvAlzQ&callback=myMap"></script>-->
+<!--To use this code on your website, get a free API key from Google.
+Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp-->
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
